# projector_python_beginning

./: .pre-commit-config.yaml  main.py  pyproject.toml  task_runner.py
week_01/: web.ipynb  web.py
week_01/assignment_1_1/: 1_1_assignment.ipynb  assignment_1_1.py
week_01/assignment_1_2/: assignment_1_2.py
week_01/homework_01/: solutions.py
week_01/homework_02/: solutions.py  tasks.ipynb
week_01/webinar/: solutions.py  tasks.ipynb
week_02/homework_01/: solutions.py  tasks.ipynb
week_02/homework_02/: solutions.py  tasks.ipynb
week_02/webinar/: solutions.py  tasks.ipynb
week_03/homework_01/: solutions.py  tasks.ipynb
week_03/homework_02/: solutions.py
week_03/webinar/: solutions.py  tasks.ipynb
week_04/homework_01/: solutions.py  tasks.ipynb
week_04/homework_02/: solutions.py  tasks.ipynb
week_04/webinar/: solutions.py  tasks.ipynb  timeit_test.py
week_05/homework_01/: solutions.py  tasks.ipynb
week_05/homework_02/: solutions.py  tasks.ipynb
week_05/webinar/: result.json  solutions.py  tasks.ipynb  text.txt
week_06/homework_02/: solutions.py
week_06/webinar/: tasks.ipynb
week_07/homework_01/: solutions.py  tasks.ipynb
week_07/homework_02/: solutions.py  tasks.ipynb
week_07/webinar/: client.py  server.py  tasks.ipynb
week_08/homework_01/: solutions.py  tasks.ipynb
week_08/homework_02/: solutions.py  tasks.ipynb
week_08/webinar/: solutions.py  tasks.ipynb
week_09/homework_01/: solutions.py  tasks.ipynb
week_09/homework_02/: solutions.py  tasks.ipynb
week_09/webinar/: tasks.ipynb
week_10/homework_01/: solutions.py  (+1 more)
(+4 files in other folders)
